--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.1",
+        "maatwebsite/excel": "^3.1",
         "sirajcse/laravel-unique-id-generator": "^1.0",
         "spatie/laravel-permission": "^5.7"
     },
